--- a/carezoom_frontend/templates/innovatorList.html
+++ b/carezoom_frontend/templates/innovatorList.html
@@ -11,7 +11,8 @@
 {% for i in innovatorsAll %}
 
     	<left>
-    		<form action="/innovator" method="post">
+
+    		<form action="/innovator" method="post" target="_blank">
 
   				
   				<input type="submit" name="sub" value= "{{i}}" ></input>
