--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -5,19 +5,113 @@
 {% endblock %}
 
 {% block main %}
+<style>
+h2 {
+    display: block;
+    font-size: 2em;
+    margin-top: 0.83em;
+    margin-bottom: 0.83em;
+    margin-left: 0;
+    margin-right: 0;
+    width:100%;
+    font-weight: bold;
+    text-align: left;
+
+}
+.accordion {
+    background-color: #f2e2e1;
+    color: #000;
+    cursor: pointer;
+    padding: 0px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+
+    transition: 0.4s;
+
+}
+
+.active, .accordion:hover {
+    background-color: #ba4444;
+    color:white;
+}
+
+.panel {
+    padding: 0 0px;
+    background-color: #ba4444;
+    max-height: 0;
+    color: white;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
 
 
-    <article>
-  <section style="background-color:white">
-    <h2 style="color:navy; width:50%; display:inline-block;">{{title}}</h2>
-    <p style="color:navy;">{{info.Organization}}</p>
-    <br>
-    <p style="color:navy" >{{info.Workflow}}</p>
 
-    <p>Pariatur consequatur blanditiis voluptatem. Error in esse temporibus quia. Perferendis molestiae velit deleniti deserunt. Provident qui ullam adipisci optio. Molestias similique et deserunt sint molestias autem non autem. Nemo itaque repellat assumenda nostrum qui eos porro dolorum.</p>
-  </section>
- 
-</article>
+
+
+</style>
+
+
+<article>
+
+
+<h2 style="font-size: 3em; text-align: left">{{title}}</h2>
+<blockquote>
+<p>{{info.Overview}}</p>
+</blockquote>
+
+
+<button class="accordion"><h2> Organization</h2></button>
+<div class="panel">
+  <p>{{info.Organization}}</p>
+</div>
+
+<button class="accordion"><h2> Daily Workflow</h2></button>
+<div class="panel">
+  <p>{{info.Workflow}}</p>
+</div>
+
+<button class="accordion"><h2> Budget</h2></button>
+<div class="panel">
+  <p>{{info.Budget}}</p>
+</div>
+
+<button class="accordion"><h2> Setup</h2></button>
+<div class="panel">
+  <p>{{info.Setup}}</p>
+</div>
+
+<button class="accordion"><h2> Outcomes</h2></button>
+<div class="panel">
+  <p>{{info.Outcomes}}</p>
+</div>
+
+
+<figure>
+<img src="https://mave.me/img/projects/full_placeholder.png">	
+<img src="https://res.cloudinary.com/hrscywv4p/image/upload/c_limit,fl_lossy,h_1440,w_720,f_auto,q_auto/v1/1275274/d4lk2en4x9r4mxbfzogw.png">
+<img src="https://mail.google.com/mail/u/0/?ui=2&ik=ef7fe83783&view=att&th=1635bfceea7670a9&attid=0.1&disp=safe&realattid=f_jh5hs8zj0&zw">	
+
+</figure>
+
+<script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+  acc[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var panel = this.nextElementSibling;
+    if (panel.style.maxHeight){
+      panel.style.maxHeight = null;
+    } else {
+      panel.style.maxHeight = panel.scrollHeight + "px";
+    } 
+  });
+}
+</script>
+
 
 
 
