--- a/carezoom_frontend/templates/meetTheTeam.html
+++ b/carezoom_frontend/templates/meetTheTeam.html
@@ -17,10 +17,12 @@
   margin: auto;
   text-align: center;
   font-family: arial;
+  background-color: #f2e2e1;
+  color:grey;
 }
 
 .title {
-  color: grey;
+  color: black;
   font-size: 18px;
 }
 
@@ -54,7 +56,7 @@ button:hover, a:hover {
 <ul class="flex-container">
   <div class="card">
   <img src="/w3images/team2.jpg" alt="Lisa" style="width:100%">
-  <h3>Lisa Rotenstein, MD MBA</h3>
+  <h3 style="color:black;">Lisa Rotenstein, MD MBA</h3>
   <p class="title">Co-founder</p>
   <p>Brigham Internal Medicine Resident</p> <p>Harvard Medical School and Harvard Business School graduate</p>
 <p>MedTech Boston's 40 under 40 in Healthcare; World Economic Forum Global Shaper</p>
