--- a/carezoom_frontend/templates/results.html
+++ b/carezoom_frontend/templates/results.html
@@ -330,11 +330,11 @@
     	<left>
     		<form action="/intervention" method="post">
 
-  				<input type="submit" name="sub" value= "{{r.Title}}" ></input>
+  				<h2><input type="submit" name="sub" value= "{{r.Title}}" ></input></h2>
 			</form>
     		
 
-			<h4 font-size=20px>{{r.Organization}}</h4>
+			<h4 font-size=20px>{{r.Overview}}</h4>
 			<br><br>
 		</left>
 
