--- a/carezoom_frontend/templates/about.html
+++ b/carezoom_frontend/templates/about.html
@@ -9,9 +9,14 @@
 <h2> What We Do </h2>
 <center>
 <h4> <p>Healthcare organizations are constantly re-inventing the wheel when it comes to new programs.</p> <br>
-<p>We are developing a high-tech tool that helps healthcare providers</p> <p>adopt best practices for excellent patient care. <p> <br>
 
-<p>Our research-supported databank of innovation "recipes" and </p> <p>affordable, one-on-one consulting sessions with expert clinician innovators</p><p> can help move your practice forward. </p></h4>
+<p> Our research-supported databank of <b><a href="{{ url_for('search') }}" style="color:white">innovation "recipes"</a></b> and
+affordable, one-on-one consulting sessions with expert clinician innovators 
+can help you identify & adopt best practices for excellent patient care.</p>
+<br>
+<p>Backed by the Harvard Innovation Lab, the Harvard New Venture Competition, and the Brigham Research Institute, we can help move your practice forward.<p> <br>
+
+
 </center>
 
 {% endblock %}
