--- a/carezoom_frontend/templates/meetTheTeam.html
+++ b/carezoom_frontend/templates/meetTheTeam.html
@@ -14,6 +14,7 @@
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
+  height: 950px;
   margin: auto;
   text-align: center;
   font-family: arial;
