--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -79,34 +79,34 @@ h2 {
 
 <h2 style="font-size: 3em; text-align: left">{{title}}</h2>
 <blockquote>
-<p>{{info.Overview}}</p>
+<p>{{info.overview}}</p>
 </blockquote>
 
 
 
 <button class="accordion"><h2> Background</h2></button>
 <div class="panel">
-  <p>{{info.Organization}}</p>
+  <p>{{info.background}}</p>
 </div>
 
 <button class="accordion"><h2> Daily Workflow</h2></button>
 <div class="panel">
-  <p>{{info.Workflow}}</p>
+  <p>{{info.workflow}}</p>
 </div>
 
 <button class="accordion"><h2> Budget</h2></button>
 <div class="panel">
-  <p>{{info.Budget}}</p>
+  <p>{{info.budget}}</p>
 </div>
 
 <button class="accordion"><h2> Setup</h2></button>
 <div class="panel">
-  <p>{{info.Setup}}</p>
+  <p>{{info.setup}}</p>
 </div>
 
 <button class="accordion"><h2> Outcomes</h2></button>
 <div class="panel">
-  <p>{{info.Outcomes}}</p>
+  <p>{{info.outcomes}}</p>
 </div>
 
 
