--- a/carezoom_frontend/static/styles.css
+++ b/carezoom_frontend/static/styles.css
@@ -269,7 +269,7 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    text-align: left
+    text-align: center
 }
 
 input[type=submit]:hover {
