--- a/carezoom_frontend/templates/results.html
+++ b/carezoom_frontend/templates/results.html
@@ -10,8 +10,8 @@
 </head>
 <style>
 	body {
-  font-family: 'Arial';
-  color: #646464;
+  font-family: 'PT Serif', serif;
+  color: white;
 }
 
 .continents-wrap {
@@ -35,13 +35,14 @@
 }
 
 .flowers div {
-  float: left;
-  width: 300px;
+  text-align: center;
+  width: 100%;
   height: 68px;
   line-height: 68px;
   padding: 0 5%;
   margin: 0 0 1px;
   position: relative;
+  color:white;
 }
 
 h3 {
@@ -101,11 +102,12 @@ h3 {
     transition: max-height 0.2s ease-out;
     padding-left: 10px;
     padding-right: 10px;
+    width: 200px;
 }
 
 article {
     display: grid;
-    grid-template-columns: 70px 200px 10px 700px 1000px;
+    grid-template-columns: 70px 200px 10px 1000px 1000px;
 }
 article > * {
     grid-column: 4;
@@ -327,7 +329,7 @@ article > flowers-wraps {
 </div>
 
 
-<div class="container" style="align-items: flex-start">
+<div class="container" style="align-items: flex-start; width:100%">
 	<div class="flowers">
   {% for r in results %}
 
