--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -86,6 +86,7 @@ h2 {
 
 <button class="accordion"><h2> Background</h2></button>
 <div class="panel">
+	<p>{{info.orgtypetags}}</p>
   <p>{{info.orgtypetext}}</p>
   <p>{{info,orgcontextmacro}}</p>
   <p>{{info.orgcontextleader}}</p>
