added all fields for intervention

--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -96,6 +96,12 @@ h2 {
   <p>{{info.orgcontextleader}}</p>
 </div>
 
+<button class="accordion"><h2>Where we are</h2></button>
+<div class="panel">
+	<h4>Current Status</h4>
+  <p>{{info.currentstatus}}</p>
+</div>
+
 <button class="accordion"><h2> Daily Workflow</h2></button>
 <div class="panel">
 
@@ -107,6 +113,22 @@ h2 {
 <button class="accordion"><h2> Budget</h2></button>
 <div class="panel">
   <p>{{info.budgetdetails}}</p>
+</div>
+
+<button class="accordion"><h2> Patient Population</h2></button>
+<div class="panel">
+	<h4>Patient Population Served + Payor Information</h4>
+  <p>{{info.patientpop}}</p>
+</div>
+
+<button class="accordion"><h2> Technology Used</h2></button>
+<div class="panel">
+  <p>{{info.techchoices}}</p>
+</div>
+
+<button class="accordion"><h2>Team Members </h2></button>
+<div class="panel">
+  <p>{{info.teamchoices}}</p>
 </div>
 
 <button class="accordion"><h2> Setup</h2></button>
@@ -123,6 +145,8 @@ h2 {
   <p>{{info.progsetuptraining}}</p>
 </div>
 
+
+
 <button class="accordion"><h2> Outcomes</h2></button>
 <div class="panel">
 	<h4>Key Outcome</h4>
@@ -133,6 +157,38 @@ h2 {
   <p>{{info.outcomesfuture}}</p>
 </div>
 
+<button class="accordion"><h2> Benefits</h2></button>
+<div class="panel">
+  <p>{{info.benefits}}</p>
+</div>
+
+<button class="accordion"><h2> Challenges</h2></button>
+<div class="panel">
+	<h4>Unique Challenges</h4>
+  <p>{{info.challengesunique}}</p>
+  <h4>Personnel Challenges</h4>
+  <p>{{info.challengespersonnel}}</p>
+</div>
+
+<button class="accordion"><h2> Ratings</h2></button>
+<div class="panel">
+	<h4>Rating Score</h4>
+  <p>{{info.ratingscore}}</p>
+  <h4>Description</h4>
+  <p>{{info.ratingdesc}}</p>
+</div>
+
+<button class="accordion"><h2> Literary Review</h2></button>
+<div class="panel">
+  <p>{{info.litrev}}</p>
+  <h4>References</h4>
+  <p>{{info.litrevref}}</p>
+</div>
+
+<button class="accordion"><h2>Glossary</h2></button>
+<div class="panel">
+  <p>{{info.glossary}}</p>
+</div>
 
 <figure>
 
