added new spreadsheets

--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -92,11 +92,11 @@ h2 {
   <p>{{info.orgtypetext}}</p>
   <h4>Macro Trends</h4>
   <p>{{info.orgcontextmacro}}</p>
-  <h4>Conext</h4>
+  <h4>Context</h4>
   <p>{{info.orgcontextleader}}</p>
 </div>
 
-<button class="accordion"><h2>Where we are</h2></button>
+<button class="accordion"><h2>Where We Are</h2></button>
 <div class="panel">
 	<h4>Current Status</h4>
   <p>{{info.currentstatus}}</p>
@@ -190,12 +190,7 @@ h2 {
   <p>{{info.glossary}}</p>
 </div>
 
-<figure>
 
-<img src="https://res.cloudinary.com/hrscywv4p/image/upload/c_limit,fl_lossy,h_1440,w_720,f_auto,q_auto/v1/1275274/d4lk2en4x9r4mxbfzogw.png">
-<img src="https://mail.google.com/mail/u/0/?ui=2&ik=ef7fe83783&view=att&th=1635bfceea7670a9&attid=0.1&disp=safe&realattid=f_jh5hs8zj0&zw">	
-
-</figure>
 
 <script>
 var acc = document.getElementsByClassName("accordion");
