--- a/carezoom_frontend/templates/home.html
+++ b/carezoom_frontend/templates/home.html
@@ -5,6 +5,22 @@
 {% endblock %}
 {% block main %}
 
+<h2>WHO WE ARE</h2>
+<div class="w3-container">
+    <h4>
+        <p>
+            Healthcare organizations are constantly re-inventing the wheel when it comes to new programs.
+        </p>
+        <p>
+            Our research-supported databank of <b><a href="{{ url_for('search') }}" style="color:white">innovation "recipes"</a></b> and affordable, one-on-one consulting sessions with expert clinician innovators can help you identify & adopt best practices for excellent patient care.
+        </p>
+        <p>
+            <p>Backed by the <b>Harvard Innovation Lab<b>, the <b>Harvard New Venture Competition<b>, and the Brigham Research Institute<b>, we can help move your practice forward.<p> 
+        </p>
+    </h4>
+</div>
+
+
  <h2>Choose one of the options to get started:</h2>
            
 
