--- a/carezoom_frontend/templates/home.html
+++ b/carezoom_frontend/templates/home.html
@@ -34,7 +34,7 @@
             </center>
 
 <h2>FREQUENTLY ASKED QUESTIONS</h2>
-<div class="container" style="padding-right:30px; padding-left: 30px; text-align:center">
+<div class="container" style="padding-right:30px; padding-left: 30px">
     <ul>
         <li>What is an innovation “recipe”?</li>
         <ul>
