--- a/carezoom_frontend/templates/index.html
+++ b/carezoom_frontend/templates/index.html
@@ -37,7 +37,7 @@
                 <div class="collapse navbar-collapse" id="navbar">
                             <center><ul class="nav navbar-nav">
                                 <li><a href="{{ url_for('home') }}">Home</a></li>
-                                <li><a href="{{ url_for('search') }}">Recipes</a></li>
+                                <li><a href="{{ url_for('profile') }}">Recipesp</a></li>
                                 <li><a href="{{ url_for('search') }}">Search</a></li>
                                 <li><a href="{{ url_for('add') }}">Add Project</a></li>
                                 <li><a href="{{ url_for('innovators') }}">Innovators</a></li>
