--- a/carezoom_frontend/templates/index.html
+++ b/carezoom_frontend/templates/index.html
@@ -40,6 +40,7 @@
                                 <li><a href="{{ url_for('recipes') }}">Recipes</a></li>
                                 <li><a href="{{ url_for('search') }}">Search</a></li>
                                 <li><a href="{{ url_for('add') }}">Add Project</a></li>
+                                <li><a href="https://docs.google.com/a/college.harvard.edu/forms/d/1w5wF_ZVhXIxebCa3ftFs4AcCWc9rhf5i-1t_A8X7ljI/edit?usp=drive_web" target="_blank">Microconsulting</a></li>
                                 <li><a href="{{ url_for('innovators') }}">Innovators</a></li>
                                 <li><a href="{{ url_for('team') }}">Meet the Team</a></li>
                             </ul></center>
