--- a/carezoom_frontend/templates/recipes.html
+++ b/carezoom_frontend/templates/recipes.html
@@ -119,7 +119,7 @@ article > flowers-wraps {
 }
 
 </style>
-<h2 style="text-align:center">All Recipes</h2><br>
+<h2 style="text-align:center">All Recipes</h2>
 
 <div class="container" style="align-items: flex-start; width:100%">
 	<div class="flowers">
@@ -131,9 +131,12 @@ article > flowers-wraps {
   				<h2><input type="submit" name="sub" value= "{{r.title}}" ></input></h2>
 			</form>
     		
-
+      <h4 font-size=15px>{{r.innovname}}</h4>
+      <br>
+      <h4 font-size=15px>{{r.editorname}}</h4>
+      <br>
 			<h4 font-size=20px>{{r.overview}}</h4></div>
-			<br><br> <br><br><br>
+			<br><br> <br><br>
     {% endif %}
 
   {% endfor %}
