--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -82,11 +82,11 @@ h4 {
 
 <h2 style="font-size: 3em; text-align: left">{{info.title}}</h2>
 <br>
-<h4>Innovator: </h4>{{info.innovname}}<br>
-<h4>Editor: </h4>{{info.editorname}}<br>
-<h4>Editor: </h4>{{info.clinname}}<br>
-<h4>Editor: </h4>{{info.orgname}}<br>
-<h4>Editor: </h4>{{info.location}}<br>
+<h4>Innovator: </h4><h4 style="font-style: normal">{{info.innovname}}</h4><br>
+<h4>Editor: </h4> <h4 style="font-style: normal">{{info.editorname}}</h4><br>
+<h4>Clinic: </h4> <h4 style="font-style: normal"> {{info.clinname}}</h4><br>
+<h4>Organization: </h4> <h4 style="font-style: normal">{{info.orgname}}</h4><br>
+<h4>Location: </h4>{<h4 style="font-style: normal">{info.location}}</h4><br>
 
 <blockquote>
 <p>{{info.overview}}</p>
