--- a/carezoom_frontend/templates/home.html
+++ b/carezoom_frontend/templates/home.html
@@ -30,8 +30,9 @@
 
             <a href="{{ url_for('add') }}" class="classname">Add my project</a>
             <a href="{{ url_for('search') }}" class="classname">Search for a project</a>
-            <a href="https://docs.google.com/a/college.harvard.edu/forms/d/1w5wF_ZVhXIxebCa3ftFs4AcCWc9rhf5i-1t_A8X7ljI/edit?usp=drive_web" target="_blank">Talk to an Expert</a>
+            <a href="https://docs.google.com/a/college.harvard.edu/forms/d/1w5wF_ZVhXIxebCa3ftFs4AcCWc9rhf5i-1t_A8X7ljI/edit?usp=drive_web" target="_blank" class="classname">Talk to an Expert</a>
             </center>
+             
 
             <br><br>
 
