--- a/carezoom_frontend/templates/recipes.html
+++ b/carezoom_frontend/templates/recipes.html
@@ -125,6 +125,7 @@ article > flowers-wraps {
 	<div class="flowers">
   {% for r in entries %}
     {% if not r.title == 'Title' %}
+    <div class="container">
   			<div class="flower" data_id="{{r.title}}" data-category="{{r.filter}}">
     		<form action="/intervention" method="post">
 
@@ -134,7 +135,9 @@ article > flowers-wraps {
       <h4 font-size=15px>{{r.innovname}}</h4>
       <h4 font-size=15px>{{r.editorname}}</h4>
 			<h4 font-size=20px>{{r.overview}}</h4></div>
-			<br><br> <br><br>
+			
+    </div>
+    <br><br> <br><br>
     {% endif %}
 
   {% endfor %}
