--- a/carezoom_frontend/templates/intervention.html
+++ b/carezoom_frontend/templates/intervention.html
@@ -82,21 +82,11 @@ h4 {
 
 <h2 style="font-size: 3em; text-align: left">{{info.title}}</h2>
 <br>
-<div style="clear: both">
-<h4>Innovator: </h4><h4 style="font-style: normal">{{info.innovname}}</h4><br>
-</div>
-<div style="clear: both">
-<h4>Editor: </h4> <h4 style="font-style: normal">{{info.editorname}}</h4><br>
-</div>
-<div style="clear: both">
-<h4>Clinic: </h4> <h4 style="font-style: normal"> {{info.clinname}}</h4><br>
-</div>
-<div style="clear: both">
-<h4>Organization: </h4> <h4 style="font-style: normal">{{info.orgname}}</h4><br>
-</div>
-<div style="clear: both">
-<h4>Location: </h4>{<h4 style="font-style: normal">{{info.location}}</h4><br>
-</div>
+<h4 style="text-align:left;float:left;">Innovator: </h4><h4 style="font-style: normal; text-align:right;float:right;">{{info.innovname}}</h4><br>
+<h4 style="text-align:left;float:left;">Editor: </h4> <h4 style="font-style: normal; text-align:right;float:right;">{{info.editorname}}</h4><br>
+<h4 style="text-align:left;float:left;">Clinic: </h4> <h4 style="font-style: normal; text-align:right;float:right;"> {{info.clinname}}</h4><br>
+<h4 style="text-align:left;float:left;">Organization: </h4> <h4 style="font-style: normal; text-align:right;float:right;">{{info.orgname}}</h4><br>
+<h4 style="text-align:left;float:left;">Location: </h4><h4 style="font-style: normal; text-align:right;float:right;">{{info.location}}</h4><br>
 
 <blockquote>
 <p>{{info.overview}}</p>
