--- a/carezoom_frontend/templates/add.html
+++ b/carezoom_frontend/templates/add.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block main %}
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScARaIPTdjrQgxs273cGE8z0UyUEjtfI2gRFHczzxWo_bYQ-A/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScARaIPTdjrQgxs273cGE8z0UyUEjtfI2gRFHczzxWo_bYQ-A/viewform?embedded=true" style="border:none;" width="900" height="1000" frameborder="0" marginheight="0" marginwidth="20">Loading...</iframe>
 
 <div class="container">
   <form style="width:100%">
